--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23062,6 +23062,9 @@ div.hopscotch-bubble .hopscotch-bubble-arrow-container.down .hopscotch-bubble-ar
   text-shadow: rgba(255, 255, 255, 0.3) 5px 1px, rgba(255, 255, 255, 0.2) 12px 3px, rgba(255, 255, 255, 0.1) 6px 4px; }
 
 /*# sourceMappingURL=style.css.map */
-.none {
-    display:none;
+.padding-right-0 {
+  padding-right:0px;
+}
+.padding-left-0 {
+  padding-left:0px;
 }
