register page password hide and show

--- a/assets/plugins/password_strength/password_strength.css
+++ b/assets/plugins/password_strength/password_strength.css
@@ -1,12 +1,36 @@
 .strength_wrapper {
-    display: inline-block;
+    display: block;
     position: relative;
     text-align: left;
 }
-
+.password_input{
+    border: 1px solid #ccc;
+    border-radius: 0.25rem;
+}
+.t_strength_meter p{
+    padding: 0px 10px;
+    text-transform: capitalize;
+    margin-top: 3px;
+    font-size: 11px;
+    margin-bottom: 1px;
+}
+.chk_password i.zmdi-eye{
+    color: #4d4d4d;
+}
+.chk_password i.zmdi-eye-off{
+    color: #4d4d4d;
+}
+.chk_password i.zmdi-eye:hover{
+    color: #64B0F2;
+}
+.chk_password i.zmdi-eye-off:hover{
+    color: #64B0F2;
+}
 .strength_input{
-    width: 250px;
-    font-size: 25px;
+    width: 95% !important;
+    display: inline-block;
+    /* font-size: 25px; */
+    border: none;
     background: transparent;
 }
 
